@@ -453,7 +453,7 @@ namespace CIAO
       else
         {
           DDS4CCM_DEBUG (DDS4CCM_LOG_LEVEL_ACTION, (LM_DEBUG,
-                        "CIAO::NDDS::DataReader_T<DDS_TYPE>::impl - "
+                        "ConditionManager::dds_entity - "
                         "Throwing BAD_INV_ORDER.\n"));
           throw ::CORBA::BAD_INV_ORDER ();
         }
